--- a/templates/home.html
+++ b/templates/home.html
@@ -244,15 +244,20 @@
                 Popup.appendChild(heading);
 
                 const form = document.createElement('form');
-                let actionMap = {
-                    'Dominion': { action: `{{ url_for('updateDominion') }}`, maxLength: 4 },
-                    'Catan': { action: `{{ url_for('addCatan') }}`, maxLength: 4 },
-                    'LordsofWaterdeep': { action: `{{ url_for('addLordsofWaterdeep') }}`, maxLength: 5 },
-                    'Moonrakers': { action: `{{ url_for('addMoonrakers') }}`, maxLength: 5 },
-                    'CosmicEncounter': { action: `{{ url_for('addCosmicEncounter') }}`, maxLength: 5 }
-                };
+                // let actionMap = {
+                //     'Dominion': { action: `{{ url_for('updateDominion') }}`, maxLength: 4 },
+                //     'Catan': { action: `{{ url_for('addCatan') }}`, maxLength: 4 },
+                //     'Lords of Waterdeep': { action: `{{ url_for('updateLordsofWaterdeep') }}`, maxLength: 5 },
+                //     'Moonrakers': { action: `{{ url_for('updateMoonrakers') }}`, maxLength: 5 },
+                //     'CosmicEncounter': { action: `{{ url_for('addCosmicEncounter') }}`, maxLength: 5 }
+                // };
 
-                form.action = actionMap[game].action;
+                // form.action = actionMap[game].action;
+
+                // let game = 'Dominion'
+                console.log("GAMMMMEMEEE");
+                console.log(game)
+                form.action = `{{ url_for('updategame') }}`;
                 form.method = "POST";
                 form.autocomplete = "off";
                 form.classList.add("changingform")
@@ -261,7 +266,7 @@
                     'Dominion': 4,
                     'Catan': 4,
                     'Clank': 4,
-                    'LordsofWaterdeep': 5,
+                    'Lords of Waterdeep': 5,
                     'Moonrakers': 5,
                     'CosmicEncounter': 5
                 };
@@ -270,7 +275,7 @@
                 if(Length == 4){
                     Popup.style.height = '440px';
                 } else if (Length == 5) {
-                    Popup.style.height = '515px';
+                    Popup.style.height = '525px';
                 } else if (Length == 6) {
                     Popup.style.height = '580px';
                 }
@@ -316,33 +321,65 @@
                     order.forEach(key => {
                         console.log(key)
                         if (key === 'date') {
+                            // Creaing game id
+                            const Div = document.createElement('div');
+                            Div.classList.add("playerSection2");
+                            Div.style = 'width: 25%; !important'
+                            let gameID = document.createElement('input');
+                            gameID.id = 'game_id';
+                            gameID.name = 'game_id';
+                            gameID.value = trimmedGameID;
+                            gameID.style = 'color: white; width: 97px;';
+                            gameID.readOnly = 'readonly';
+                            // Creaing game id label
+                            let IDLabel = document.createElement('label');
+                            IDLabel.setAttribute('for', "gameID");
+                            IDLabel.innerText = "Game ID";
+
                             const newDiv = document.createElement('div');
-                            newDiv.classList.add("playerSection");
+                            newDiv.classList.add("playerSection2");
+
+                            // Formatting the new date
+                            let dateString = data.date;
+                            let dateObject = new Date(dateString);
+                            let formattedDate = dateObject.toISOString().split('T')[0];
+
                             // Creating date picker input
                             const datePickerInput = document.createElement('input');
                             datePickerInput.type = "date";
                             datePickerInput.id = "datepicker";
+                            datePickerInput.name = "datepicker";
+                            datePickerInput.value = formattedDate;
                             
                             // Creating label for date picker
                             const dateLabel = document.createElement('label');
                             dateLabel.setAttribute('for', "datepicker");
                             dateLabel.innerText = "Select Date";
 
+                            Div.appendChild(IDLabel);
+                            Div.appendChild(gameID);
                             newDiv.appendChild(dateLabel);
                             newDiv.appendChild(datePickerInput);
+                            form.appendChild(Div);
                             form.appendChild(newDiv);
                         } else if (key === 'submit') {
-                            const newDiv = document.createElement('div');
-                            newDiv.classList.add("playerSection");
                             // Creating submit button
+                            const newDiv = document.createElement('div');
+                            newDiv.classList.add("playerSection2");
                             const submitButton = document.createElement('button');
-                            submitButton.innerText = "Submit";
+                            submitButton.innerText = "Update Record";
                             submitButton.classList.add('btn');
                             submitButton.classList.add('btn-primary');
-                            submitButton.style = 'margin-top: 24px;';
+                            submitButton.style = 'margin-top: 24px; width: 125px;';
 
                             newDiv.appendChild(submitButton);
                             form.appendChild(newDiv);
+                            gameType = document.createElement('input');
+                            gameType.name = 'game';
+                            gameType.value = game;
+                            gameType.style = 'Display: none;'
+
+                            form.appendChild(gameType);
                         } else {
                             const newDiv = document.createElement('div');
                             newDiv.classList.add("playerSection");
@@ -352,8 +389,10 @@
                             if (data[key]) {
                                 newInput.placeholder = `${data[key]}`;
                                 newInput.value = `${data[key]}`;
-                                newInput.id = `${key}`;
                             }
+
+                            newInput.id = `${key}`;
+                            newInput.name = `${key}`;
                             
                             // Creating label
                             const newLabel = document.createElement('label');
