--- a/static/css/GameRecordsStyles.css
+++ b/static/css/GameRecordsStyles.css
@@ -111,3 +111,88 @@ h3{
     background: transparent;
     border: 2px solid #a73939;
 }
+
+.gamepopup {
+    width: 450px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #242526;
+    border-radius: 8%;
+    text-align: center;
+    z-index: 1001;
+}
+
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(3px); /* Apply the blur effect to the overlay */
+    z-index: 1000; /* Ensure the overlay is behind the popup */
+}
+
+.playerSection {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    align-items: start;
+    margin-bottom: 17px;
+}
+
+.playerSection2 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: start;
+    margin-bottom: 17px;
+}
+
+.changingform {
+    margin-top: 10px !important;
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+label {
+    color: white;
+}
+
+input {
+    background-color: #404040;
+    padding: 5px;
+    border: #404040;
+    border-radius: 3%;
+    color: white;
+}
+
+input::placeholder {
+    color: #787675; /* Your desired color */
+}
+
+.close-button {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
+    font-size: x-large;
+    color: white;
+}
+
+.GameInfo{
+    width: 540px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
