--- a/templates/profile.html
+++ b/templates/profile.html
@@ -71,9 +71,9 @@
                     <div class="section" id="favorites" style="width: 880px; margin-bottom: 200px;">
                         <div style="display: flex; flex-direction: row; justify-content: space-between;">
                             <h3>Favorite Games</h3>
-                            <div style="display: flex; flex-direction: row;">
+                            <!-- <div style="display: flex; flex-direction: row;">
                                 <button id="expandFavorites" class="btn-outline">Expand Favorites</button>
-                            </div>
+                            </div> -->
                         </div>
                         
                         
@@ -141,13 +141,13 @@
             let adding = document.querySelector("#expandFavorites");
             adding.addEventListener('click', () => {
                 console.log("clicked")
-                let popup = document.getElementById("myPopup");
+                let popup = document.getElementById("expandpopup");
                 popup.classList.remove("Hide");
                 popup.classList.add("popup");
             })
 
             document.querySelector(".close-button").addEventListener('click', () => {
-                let popup = document.getElementById("myPopup");
+                let popup = document.getElementById("expandpopup");
                 popup.classList.remove("popup");
                 popup.classList.add("Hide");
             })
