--- a/static/css/home.css
+++ b/static/css/home.css
@@ -216,6 +216,14 @@ h3 {
     margin-bottom: 17px;
 }
 
+.playerSection2 {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: start;
+    margin-bottom: 17px;
+}
+
 label {
     color: white;
 }
@@ -243,4 +251,20 @@ input::placeholder {
     cursor: pointer;
     font-size: x-large;
     color: white;
+}
+
+.GameInfo{
+    width: 540px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.changingform {
+    margin-top: 10px !important;
+    width: 450px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
