--- a/templates/DominionSelect.html
+++ b/templates/DominionSelect.html
@@ -21,8 +21,8 @@
                         <button class="set sort deselected" onclick="hideSet('base', this)">Dominion</button>
                         <button class="set sort deselected" onclick="hideSet('IntrigueSE', this)">Intrigue</button>
                         <button class="set sort deselected" onclick="hideSet('SeasideSE', this)">Seaside</button>
-                        <!-- <button class="set sort deselected">Prosperity</button>
-                        <button class="set sort deselected">Hinterlands</button>
+                        <button class="set sort deselected" onclick="hideSet('ProsperitySE', this)">Prosperity</button>
+                        <!-- <button class="set sort deselected">Hinterlands</button>
                         <button class="set sort deselected">Dark Ages</button>
                         <button class="set sort deselected">Guilds</button>
                         <button class="set sort deselected">Adventures</button>
@@ -124,7 +124,6 @@
                 <img src="static/images/SeasideSE/200px-Wharf.jpg" class="card SeasideSE" id="Wharf">
 
                 <!--Intrigue Second Edition   -->
-
                 <img src="static/images/IntrigueSE/200px-Courtyard.jpg" class="card IntrigueSE" id="Courtyard">
                 <img src="static/images/IntrigueSE/200px-Lurker.jpg" class="card IntrigueSE" id="Lurker">
                 <img src="static/images/IntrigueSE/200px-Pawn.jpg" class="card IntrigueSE" id="Pawn">
@@ -153,6 +152,34 @@
                 <img src="static/images/IntrigueSE/200px-Upgrade.jpg" class="card IntrigueSE" id="Upgrade">
                 <img src="static/images/IntrigueSE/200px-Harem.jpg" class="card IntrigueSE" id="Harem">
                 <img src="static/images/IntrigueSE/200px-Nobles.jpg" class="card IntrigueSE" id="Nobles">
+
+                <!--Prosperity Second Edition   -->
+                <img src="static/images/ProsperitySE/200px-Anvil.jpg" class="card ProsperitySE" id="Anvil">
+                <img src="static/images/ProsperitySE/200px-Watchtower.jpg" class="card ProsperitySE" id="Watchtower">
+                <img src="static/images/ProsperitySE/200px-Bishop.jpg" class="card ProsperitySE" id="Bishop">
+                <img src="static/images/ProsperitySE/200px-Clerk.jpg" class="card ProsperitySE" id="Clerk">
+                <img src="static/images/ProsperitySE/200px-Investment.jpg" class="card ProsperitySE" id="Investment">
+                <img src="static/images/ProsperitySE/200px-Monument.jpg" class="card ProsperitySE" id="Monument">
+                <img src="static/images/ProsperitySE/200px-Quarry.jpg" class="card ProsperitySE" id="Quarry">
+                <img src="static/images/ProsperitySE/200px-Tiara.jpg" class="card ProsperitySE" id="Tiara">
+                <img src="static/images/ProsperitySE/200px-Worker's_Village.jpg" class="card ProsperitySE" id="Workers_Village">
+                <img src="static/images/ProsperitySE/200px-Charlatan.jpg" class="card ProsperitySE" id="Charlatan">
+                
+                <img src="static/images/ProsperitySE/200px-City.jpg" class="card ProsperitySE" id="City">
+                <img src="static/images/ProsperitySE/200px-Collection.jpg" class="card ProsperitySE" id="Collection">
+                <img src="static/images/ProsperitySE/200px-Crystal_Ball.jpg" class="card ProsperitySE" id="Crystal_Ball">
+                <img src="static/images/ProsperitySE/200px-Magnate.jpg" class="card ProsperitySE" id="Magnate">
+                <img src="static/images/ProsperitySE/200px-Mint.jpg" class="card ProsperitySE" id="Mint">
+                <img src="static/images/ProsperitySE/200px-Rabble.jpg" class="card ProsperitySE" id="Rabble">
+                <img src="static/images/ProsperitySE/200px-Vault.jpg" class="card ProsperitySE" id="Vault">
+                <img src="static/images/ProsperitySE/200px-War_Chest.jpg" class="card ProsperitySE" id="War_Chest">
+                <img src="static/images/ProsperitySE/200px-Grand_Market.jpg" class="card ProsperitySE" id="Grand_Market">
+                <img src="static/images/ProsperitySE/200px-Hoard.jpg" class="card ProsperitySE" id="Hoard">
+                
+                <img src="static/images/ProsperitySE/200px-Expand.jpg" class="card ProsperitySE" id="Expand">
+                <img src="static/images/ProsperitySE/200px-Forge.jpg" class="card ProsperitySE" id="Forge">
+                <img src="static/images/ProsperitySE/200px-King's_Court.jpg" class="card ProsperitySE" id="Kings_Court">
+                <img src="static/images/ProsperitySE/200px-Peddler.jpg" class="card ProsperitySE" id="Peddler">
 
             </div>
 
